--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,5 +5,8 @@ job_build:
   stage: test
   script:
     - echo "Running tests"
+    - apt-get update -qy
+    - apt-get install -y python-dev python-pip
+    - pip install -r requirements.txt
     - python manage.py test
 
