--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ job_build:
   script:
     - echo "Running tests"
     - apt-get update -qy
-    - apt-get install -y python-dev python-pip
+    - apt-get install -y python-dev-is-python3 python3-pip
     - pip install -r requirements.txt
-    - python manage.py test
+    - python3 manage.py test
 
