--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,6 @@ job_build:
     - echo "Running tests"
     - apt-get update -qy
     - apt-get install -y python-dev-is-python3 python3-pip
-    - pip install -r requirements.txt
+    - pip install -r requirements.txt --break-system-packages
     - python3 manage.py test
 
