--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,5 +8,5 @@ job_build:
     - apt-get update -qy
     - apt-get install -y python-dev-is-python3 python3-pip
     - pip install -r requirements.txt --break-system-packages
-    - python3 manage.py test
+    - python3 test.py
 
